--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -2,15 +2,64 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size: 15px;
+}
+
+:root {
+    --bg-page: #fde6fb;
+    --bg-white: #fef5fd;
+    --bg-app: #ce39b6;
+    --bg-border_app: #e2bed3;
+    --bg-app-800: #872173;
+    --color_app: #ce39b6;
+    --color_text: #313131;
+    --color_bg-nav2: #e451cf;
+    --my-bg-position: 10% 90%;
+
+    body {
+        background-color: color-mix(in srgb, var(--bg-page) 90%, #fff 10%);
+    }
+}
+
+.dark {
+    --bg-page: #2c2129;
+    --bg-border_app: #2c2129;
+    --color_text: #ffffffe1;
+    --dark-block: color-mix(in oklab, var(--bg-app) 40%, #000 60%);
+
+    body {
+        background-color: color-mix(in srgb, var(--bg-page) 80%, black 20%);
+    }
 }
 
 body {
-    font-family: "proxima-soft", "Proxima Soft", "Proxima Nova Soft", "Poppins", Helvetica, "Consolas", Arial, sans-serif !important;
-    background-color: #fafafa;
+    font-family: "Proxima Soft", "Proxima Nova Soft", "Poppins", Helvetica, "Consolas", Arial, sans-serif !important;
+    /* background-color: color-mix(in srgb, var(--bg-page) 80%, black 20%); */
+    /* background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9)), url('../img/bg_whole.jpg') center center fixed repeat; */
 }
 
-.ms_Main {
-    padding: 10px 5%;
+.max-h-modal {
+    max-height: 90vh;
+}
+
+/* body::before {
+    content: '';
+    position: fixed;
+    inset: 0;
+    background-image: url('../img/shop-solid.svg');
+    background-size: cover;
+    background-position: center;
+    background-color: #fafafa;
+    background-repeat: space;
+    background-size: contain;
+    opacity: 0.05;
+    z-index: -1;
+} */
+
+.btn-trans {
+    transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+    transition-duration: 300ms;
+    /* transition-timing-function: ease-out; */
 }
 
 .btn {
@@ -35,22 +84,7 @@ body {
     color: #fff;
 }
 
-nav {
-    height: 10vh;
-    display: flex;
-    flex-direction: row;
-}
-
-nav a {
-    color: #333;
-    text-decoration: none;
-    font-size: 16px;
-}
-
-nav a.active {
-    border-bottom: 3px solid #5d6e9c;
-}
-
+/* 
 .logo {
     height: 100%;
     width: 200px;
@@ -73,39 +107,103 @@ nav a.active {
     width: 100%;
     height: 100%;
     color: #ce39b6;
+} */
+
+.cart-price {
+    background-image: linear-gradient(45deg, #df4881, #c430d7);
+}
+
+.cart:hover {
+    color: #fff;
+}
+
+.cart:hover>a,
+.cart:hover>svg {
+    color: inherit;
+}
+
+input:focus {
+    border: none;
+}
+
+.logo {
+    display: inline-block;
+    height: min-content;
+}
+
+.logo a {
+    display: flex;
+    align-items: center;
+    color: inherit;
+    text-decoration: none;
+}
+
+.logo img {
+    width: 60px;
+    height: 50px;
+    border-radius: 4px;
+}
+
+/* nav {
+    height: 10vh;
+    display: flex;
+    flex-direction: row;
+}
+
+nav a {
+    color: #333;
+    text-decoration: none;
+    font-size: 16px;
 }
 
 nav .nav-link {
     display: flex;
     list-style: none;
     height: 100%;
-    /* justify-content: flex-end; */
-    align-items: center;
     margin-left: auto;
     margin-right: 5px;
     text-transform: capitalize;
-    z-index: 5;
+    z-index: 10;
 }
 
-nav .nav-link li a {
-    padding: 15px 10px;
+nav .nav-link li a,
+nav .nav-link li button {
+    padding: 15px 15px;
     color: #ce39b6;
+    display: inline-block;
+    background-color: #fff;
+    margin: 0 0.2rem;
+    border-top: 3px solid transparent;
+    border-radius: 0 0 4px 4px;
+    z-index: 8 !important;
+    box-shadow: 0 0 5px 0 rgb(48 39 39 / 22%);
 }
 
-nav .nav-link li {
-    transition: background-color 0.7s ease-in-out;
+.dark nav .nav-link li a,
+.dark nav .nav-link li button {
+    background-color: var(--bg-app-800);
+    color: #fff;
 }
 
-/* nav .nav-link li:hover a {
-    transform: translateY(-5px);
-} */
+nav .nav-link li a,
+.nav-trans {
+    transition: background-color 0.2s ease-in-out;
+}
 
 nav .nav-link li a:hover {
     color: #fff;
     transition: background-color 0.3s ease-in-out;
-    background-color: #3d5aac;
-    border-bottom: 2px solid #53a0f8;
+    background-color: #ce39b6;
+    border-top: 5px solid #f7b0ef;
 }
+
+nav .nav-link li a.active {
+    border-top: 5px solid #f7b0ef;
+    background-color: #a5268e;
+    color: #fff;
+    padding-top: 1.3rem;
+    cursor: default;
+} */
 
 .Main {
     display: flex;
@@ -116,11 +214,7 @@ nav .nav-link li a:hover {
     text-align: center;
 }
 
-.Main .Header {
-    margin: 10px;
-}
-
-.Main h1,
+/* .Main h1,
 .Main h2 {
     color: #222;
     text-align: center;
@@ -128,8 +222,9 @@ nav .nav-link li a:hover {
 
 .Main h1 {
     font-size: 40px;
-}
+} */
 
+/* 
 .hT {
     text-align: center;
     width: 70%;
@@ -155,30 +250,30 @@ nav .nav-link li a:hover {
     border-bottom: 5px solid #000;
     margin: 40px auto 0;
     cursor: default;
-}
+} */
 
-.article {
+/* .article {
     position: relative;
     width: 296px;
     height: min-content;
     display: flex;
     flex-direction: column;
     margin: 10px;
-    /* font-size: 17px; */
-    /* justify-content: space-between; */
-    /* border-radius: 15px; */
-    /* box-shadow: 0 0 10px #999; */
+    font-size: 17px; */
+/* justify-content: space-between; */
+/* border-radius: 15px; */
+/* box-shadow: 0 0 10px #999;
 }
 
 .article .art_H {
     position: relative;
     width: 100%;
     height: 240px;
-    /* border-radius: 15px; */
+    border-radius: 15px;
 }
 
 .article .art_H::before {
-    /* content: ''; */
+    content: '';
     position: absolute;
     bottom: 0;
     left: 50%;
@@ -211,11 +306,11 @@ nav .nav-link li a:hover {
 .article .art_D {
     position: relative;
     width: 100%;
-    /* height: 210px; */
+    height: 210px;
     height: min-content;
     color: #fff;
     background-color: #232949;
-    /* border-radius: 0 0 15px 15px; */
+    border-radius: 0 0 15px 15px;
     padding: 15px 20px 15px 20px;
 }
 
@@ -229,31 +324,31 @@ nav .nav-link li a:hover {
     font-size: 15px;
     top: -50px;
     left: 0;
-    /* width: 50%; */
+    width: 50%;
     height: 50px;
     color: #000;
     background-color: #232949;
     letter-spacing: 1px;
-    /* border-top: 10px solid #fafafa; */
-    /* border-right: 10px solid #fafafa; */
+    border-top: 10px solid #fafafa;
+    border-right: 10px solid #fafafa;
     border-top-right-radius: 15px;
 }
 
 .art_D .title .price span {
-    /* padding: 5px 10px; */
+    padding: 5px 10px;
     padding: 15px 5px;
     background-color: #fff;
     border-radius: 10px;
     border-top-left-radius: 0;
-    /* display: block; */
-    /* width: 150px; */
-    /* height: 35px; */
+    display: block;
+    width: 150px;
+    height: 35px;
     margin: 0 4px;
     margin-top: 7px;
 }
 
 .art_D .title .price::before {
-    /* content: ''; */
+    content: '';
     position: absolute;
     width: 25px;
     height: 25px;
@@ -263,7 +358,7 @@ nav .nav-link li a:hover {
 }
 
 .art_D .title .price::after {
-    /* content: ''; */
+    content: '';
     position: absolute;
     bottom: 0;
     right: -25px;
@@ -289,9 +384,7 @@ nav .nav-link li a:hover {
 }
 
 .confirm {
-    /* background-image: linear-gradient(
-45deg
-, #df4881, #c430d7); */
+    background-image: linear-gradient(45deg, #df4881, #c430d7);
     text-decoration: none;
     color: #ce39b6;
     font-size: 14px;
@@ -310,8 +403,8 @@ nav .nav-link li a:hover {
 
 .slct {
     border: none;
-    /* appearance: none; */
-    padding: 12px 10px;
+    appearance: none;
+    padding: 11px 10px;
     background-color: #edf1ef;
     box-shadow: 0 0 3px rgb(0 0 0 / 40%);
     font-size: 16px;
@@ -324,49 +417,69 @@ input[type="number"].inpt-f {
     max-width: 200px;
 }
 
-.search select:hover {
-    background-color: #863980ed;
-    background: #5b78c7;
-    color: #fff;
-}
-
 .artV {
     margin-top: 20px;
 }
 
 .artV span {
     color: #df4881;
-}
+} */
 
 .search select option {
     background-color: #863980ed;
     background: #232949;
-    color: #fff;
+    color: hsl(0, 0%, 100%);
+}
+
+.pagination {
+    max-width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.25rem;
 }
 
 .pagination a {
     display: inline-block;
-    padding: 10px 15px;
-    box-shadow: 0 0 1px rgb(0 0 1);
-    margin: 0 5px;
+    padding: 7px 15px;
+    /* box-shadow: 0 0 1px rgb(30, 30, 36); */
     text-decoration: none;
-    transition: 0.7s ease-out;
+    transition: 0.3s ease-out;
+    background-color: var(--bg-white);
+    border-radius: 8px;
+    border: 1px solid var(--bg-border_app);
+    min-width: 50px;
+    text-align: center;
+}
+
+.dark .pagination a {
+    background-color: #6f205e;
+    color: #ffffffe1;
+}
+
+.dark .pagination .active a {
+    background-color: var(--bg-app);
+    color: #ffffffe1;
 }
 
 .pagination a:hover {
-    background-color: #df4881;
+    background-color: var(--bg-app);
     color: #fff;
-    background: #5b78c7;
 }
 
 .pagination .active a {
     box-shadow: none;
     cursor: text;
+    background-color: #6f205e;
+    color: #fff;
+    cursor: default;
 }
 
-.pagination .active a:hover,
+.pagination .disabled a {
+    border: none;
+}
+
 .pagination .disabled a:hover {
-    color: inherit;
+    color: var(--color_text);
     background: none;
 }
 
@@ -419,132 +532,23 @@ input[type="number"].inpt-f {
     color: #c4c4c4;
 }
 
-.about .lbl {
-    color: #444;
-}
-
 .about {
-    display: flex;
-    background: #fff;
+    background: #fef5fd;
     width: 95%;
-    /* max-width: 800px; */
-    padding: 30px;
-    margin: auto;
-    /* margin-top: 30px; */
+    margin: 0 auto;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
-
-.about,
-.about p {
-    text-align: center;
-}
-
-.about p {
-    margin: 0;
-    padding: 0 60px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-
-.about_img {
-    width: 300px;
-    height: 350px;
-    border-radius: 15px;
-}
-
-.about img {
-    width: 200px;
-    height: 200px;
-    border-radius: 15px;
-}
-
-/* INSCRIPTION / CONNEXION */
-.Cform {
-    width: 60%;
-    min-width: 450px;
-    color: #333;
-    padding: 30px 40px;
-    border-radius: 15px;
-    background: #fff;
-    /* backdrop-filter: blur(20%); */
-    margin-top: 15px;
-    border: 2px solid rgba(255, 255, 255, .2);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.Cform .conn {
-    padding-top: 40px;
-}
-
-.Cform a:hover {
-    text-decoration: underline;
-}
-
-.Cform.insc {
-    margin-top: 0;
-}
-
-.Cform .inpt {
-    position: relative;
-    width: 100%;
-    height: 50px;
-    margin-bottom: 60px;
+    /* margin-top: 30px; */
+    /* max-width: 800px; */
+    /* box-shadow: 0 0 1px rgba(0, 0, 0, 0.2); */
 }
 
 .modal-overlay {
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-.inpt input {
-    width: 100%;
-    height: 100%;
-    background: transparent;
-    outline: none;
-    border: 1px solid #ddd;
-    border-radius: 40px;
-    padding: 20px 45px 20px 20px;
-}
-
-.add {
-    width: 65%;
-}
-
-.add .slct {
-    width: 100%;
-}
-
-.subm {
-    margin-top: 15px;
-}
-
-.inpt i {
-    position: absolute;
-    right: 20px;
-    top: 100%;
-    transform: translateY(-50%);
-    font-size: 20px;
-}
-
-.add .inpt i.file {
-    transform: translateY(-10%);
-}
-
-.subm btn {
-    width: 100%;
-    height: 45px;
-    margin-top: 30px;
-}
-
-.ins {
-    margin: 30px 5px;
-}
-
 ::-webkit-file-upload-button {
-    color: #333;
-    background: #6d6d6d;
+    color: #fef5fd;
+    background: #aa6289;
     padding: 10px 20px;
     border-radius: 40px;
     border: none;
@@ -554,19 +558,24 @@ input[type="number"].inpt-f {
     cursor: pointer;
 }
 
+/* .dark ::-webkit-file-upload-button {
+    color: ;
+} */
+
 ::-webkit-file-upload-button:hover,
 :hover>::-webkit-file-upload-button {
     background: #438a5e;
     color: #fff;
 }
 
+/* 
 span.green {
     color: #6ac76a;
 }
 
 span.red {
     color: #e27c7c;
-}
+} */
 
 .animZ {
     opacity: 0;
@@ -582,8 +591,35 @@ span.red {
 .animO {
     opacity: 0;
     transform: translateY(30px);
-    animation: moveUp2 1s linear forwards;
+    animation: moveUp2 .3s linear forwards;
 }
+
+.banner_home {
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(39, 18, 35, 0.9)), url('../img/default_banner_home.jpg') center center fixed no-repeat;
+    background-size: cover;
+    height: calc(100vh - 75px);
+}
+
+.banner_trader {
+    background: linear-gradient(rgb(0 0 0 / 80%), rgb(0 0 0 / 94%)), url('../img/banner_trader.jpg') center center fixed no-repeat;
+    background-size: cover;
+    /* backdrop-filter: blur(20px); */
+}
+
+.btn-trade {
+    background: linear-gradient(45deg, #95395c, #95449f);
+}
+
+.btn-trade:hover {
+    background: linear-gradient(-45deg, #df4881, #c430d7);
+}
+
+/* footer {}
+
+footer>div {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+} */
 
 @keyframes moveUp1 {
     100% {
@@ -605,10 +641,107 @@ span.red {
     }
 }
 
+.menu {
+    position: absolute;
+    cursor: pointer;
+    right: 1rem;
+    top: 0.75rem;
+    /* transform: translate(-5%, -50%); */
+    z-index: 10;
+    background: #ce39b6;
+    padding: 4px 6px;
+    z-index: 999;
+    pointer-events: none;
+    display: none;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 3rem;
+    height: 3rem;
+}
+
+.menu div {
+    width: 100%;
+    height: 0.4rem;
+    background: #fff;
+    border-radius: 0.2rem;
+}
+
+.footer_body ul li:nth-child(1) {
+    margin-bottom: 20px;
+}
+
+.footer_body ul li:not(:nth-child(1)) {
+    display: flex;
+    justify-content: start;
+    padding: 10px;
+    color: var(--color_text);
+}
+
+.footer_body ul li a,
+.footer_body ul li button {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    transition: 0.1s ease-in all;
+}
+
+.footer_body ul li a:hover,
+.footer_body ul li button:hover {
+    color: var(--color_app);
+}
+
+.modal-content {
+    max-height: calc(90vh - 130px);
+    overflow: auto;
+}
+
+.modal-Sidebar {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 20px;
+    padding-top: 10px;
+    padding-left: 10px;
+    width: 20rem;
+    height: 100%;
+    text-transform: capitalize;
+}
+
+.modal-Sidebar ul li a,
+.modal-Sidebar ul li button {
+    display: flex;
+    border-radius: 10px;
+    width: 100%;
+    gap: 0.5rem;
+    padding: 10px 20px;
+    margin: 0.25rem 0;
+}
+
+.modal-Sidebar ul li a:hover,
+.modal-Sidebar ul li button:hover {
+    background-color: var(--color_bg-nav2);
+    padding-left: 30px;
+    color: #ffffffe7;
+}
+
+
+
+.dark .modal-parent {
+    background-color: var(--dark-blockD);
+}
+
+/* .dark .cart-header {
+    background-color: color-mix(in oklab, #ce39b6 60%, #000 40%);
+    color: #fff !important;
+} */
+
 @media screen and (max-width: 820px) {
-    .ms_Main {
-        padding: 10px;
+    .menu {
+        display: flex;
     }
+}
+
+/* @media screen and (max-width: 820px) {
 
     .confirm,
     .slct {
@@ -619,27 +752,12 @@ span.red {
         width: 100%;
     }
 
-    .line {
-        width: 30px;
-        height: 3px;
-        margin: 5px;
-        background: #000;
-    }
-
-    .line.open {
-        background: #fff;
-    }
-
     .Cform .inpt {
         margin-bottom: 85px;
     }
 
     .about {
         flex-direction: column;
-    }
-
-    nav {
-        position: relative;
     }
 
     nav a.active {
@@ -650,17 +768,16 @@ span.red {
         max-width: 95%;
     }
 
-    .etc {
-        position: fixed;
-        cursor: pointer;
-        right: 5%;
-        top: 25px;
-        /* transform: translate(-5%, -50%); */
-        z-index: 10;
+    .logo img {
+        width: 90px;
+        height: 60px;
+    }
+
+    .logo a span {
+        display: none;
     }
 
     .nav-link {
-        position: fixed;
         background: #5b78c7;
         height: 100vh;
         width: 100%;
@@ -669,10 +786,11 @@ span.red {
         flex-direction: column;
         justify-content: space-evenly;
         -webkit-clip-path: circle(100px at 90% -20%);
-        clip-path: circle(100px at 90% -20%);
+        clip-path: circle(100px at 120% -20%);
         transition: all 0.7s ease-out;
         pointer-events: none;
         color: #fff;
+        z-index: 99;
     }
 
     .nav-link li a,
@@ -685,6 +803,9 @@ span.red {
         height: 100%;
         font-size: 25px;
         color: #333 !important;
+        background-color: #5b78c7 !important;
+        text-align: center;
+        z-index: 10;
     }
 
     .nav-link li {
@@ -694,18 +815,28 @@ span.red {
         transition: all 0.5s ease 0.4s;
     }
 
-    .nav-link.open {
+    /* .nav-link.open {
         -webkit-clip-path: circle(1000px at 100% -20%);
         clip-path: circle(1000px at 100% -20%);
         pointer-events: all;
-    }
+    } */
 
-    nav .nav-link li a:hover {
-        border: none;
-        color: #fff !important;
-    }
+/* .etc.open {
+            background: #5b78c7;
+        } */
 
-    li.fade {
-        opacity: 1;
-    }
+/* .line.open {
+        background: #fff;
+    } 
+
+nav .nav-link li a:hover {
+    border: none;
+    color: #fff !important;
 }
+
+/* li.fade {
+        opacity: 1;
+    } 
+}
+
+*/
