--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -453,6 +453,7 @@ input[type="number"].inpt-f {
     display: flex;
     flex-wrap: wrap;
     gap: 0.25rem;
+    margin-bottom: 1rem;
 }
 
 .pagination a {
@@ -749,10 +750,10 @@ footer>div {
     position: absolute;
     top: 0;
     right: 0;
-    padding: 20px;
-    padding-top: 10px;
+    padding: 3rem;
+    padding-top: 2rem;
     padding-left: 10px;
-    width: 20rem;
+    /* width: 20rem; */
     height: 100%;
     text-transform: capitalize;
 }
@@ -763,7 +764,7 @@ footer>div {
     border-radius: 10px;
     width: 100%;
     gap: 0.5rem;
-    padding: 10px 20px;
+    padding: 10px 3rem;
     margin: 0.25rem 0;
 }
 
