--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -31,7 +31,7 @@
   }
 
   .modal-Sidebar {
-    background: color-mix(in srgb, var(--color_bg-nav2) 30%, #000 70%);
+    background: color-mix(in srgb, var(--color_bg-nav2) 20%, #000 80%);
   }
 }
 
@@ -117,6 +117,148 @@ nav .--nav_submenu>li {
   transform: translateY(0);
 }
 
+.about-header {
+  animation: animate_text 5s steps(28), animate_blink 0.5s infinite alternate;
+  border-right: 4px solid #fff;
+  overflow: hidden;
+  white-space: nowrap;
+  padding: 5px !important;
+}
+
+.slider {
+  position: relative;
+  width: 90%;
+  height: 300px;
+  margin: auto;
+  margin-top: 50px;
+  /* padding: 20px; */
+  /* overflow: hidden; */
+  /* border-radius: 10px; */
+  /* box-shadow: inset 0 -50px 20px rgba(37, 12, 43, 0.3); */
+  /* z-index: 1; */
+}
+
+.slider h3 {
+  margin-bottom: 15px;
+  background-color: #83467e;
+  padding: 20px;
+  /* border-radius: 4px; */
+  width: 100%;
+}
+
+.slides {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  transition: transform 0.5s ease-in-out;
+}
+
+.slides div {
+  /* width: 40%; */
+  height: min-content;
+  min-height: 60%;
+  padding: 0 0 25px 0;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  border-radius: 20px;
+  overflow: hidden;
+  /* text-align: center; */
+  /* transform-origin: center center; */
+  transform: scale(0.75);
+  opacity: 0.5;
+  transition: transform 0.3s ease, opacity 0.3s ease;
+  /* z-index: 5; */
+}
+
+.slides div:last-child {
+  flex-shrink: 0;
+  max-width: 555px;
+  /* width: 40%; */
+}
+
+.slides div ul {
+  width: 70%;
+}
+
+.slides div.active-slide {
+  transform: scale(1);
+  opacity: 1;
+}
+
+.slides ul li {
+  margin-top: 10px;
+}
+
+.slides div ul:last-child li {
+  list-style-type: disc;
+  margin-left: 10px;
+}
+
+.slider .btn-slide.prev,
+.slider .btn-slide.next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: var(--color_bg-nav);
+  color: white;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 50%;
+  box-shadow: 0 0 15px #e2b1d765;
+  transition: all 0.3s ease;
+}
+
+.slider .btn-slide.prev:hover,
+.slider .btn-slide.next:hover {
+  background: var(--color_text);
+  color: var(--color_bg-nav2);
+  box-shadow: 0 0 50px #8f1873fa;
+}
+
+button.prev {
+  left: -5%;
+}
+
+button.next {
+  right: -5%;
+}
+
+html input:-internal-autofill-selected,
+input::webkit-autofill,
+input::webkit-autofill:hover,
+input::webkit-autofill:focus,
+input::webkit-autofill:active {
+  box-shadow: 0 0 0 30px transparent inset !important;
+  -webkit-box-shadow: 0 0 0 30px transparent inset !important;
+  background: inherit !important;
+}
+
+@keyframes animate_text {
+  from {
+    width: 0;
+  }
+
+  to {
+    width: 100%;
+  }
+}
+
+@keyframes animate_blink {
+  from {
+    border-color: transparent;
+  }
+
+  to {
+    border-color: #fff;
+  }
+}
+
 @media (min-width: 480px) {
   nav li:hover>.--nav_submenu {
     display: block !important;
@@ -137,8 +279,31 @@ nav .--nav_submenu>li {
 
 @media (max-width: 640px) {
 
+  .slides div {
+    width: 80%;
+  }
+
+  .slides div ul:last-child {
+    width: 90%;
+    text-align: justify;
+  }
+
+
   nav .nav-link li>button,
   nav .nav-link li>a {
-    padding: 0.95rem 1.15rem;
+    /* padding: 0.95rem 1.15rem; */
+    /* padding: 0.75rem 1rem; */
+    border-radius: 50%;
+    padding: 0.75rem .75rem;
+  }
+
+  nav .nav-link li>button:hover,
+  nav .nav-link li>a:hover {
+    /* background-color: transparent; */
+  }
+
+  nav .nav-link li svg {
+    width: 24px;
+    height: 24px;
   }
 }
