--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -45,6 +45,7 @@ header nav {
   text-transform: capitalize;
   align-items: center;
   padding: 0 4px;
+  border-bottom: 1px solid #83467e94;
 }
 
 nav .nav-link {
@@ -233,7 +234,7 @@ button.next {
 .auth-design {
   position: absolute;
   transform: rotate(45deg);
-  width: 30%;
+  width: 40%;
   height: 50%;
   background-color: #e451cf;
   opacity: 0.5;
@@ -243,7 +244,7 @@ button.next {
 
 .auth-design.dsn-1 {
   top: 10px;
-  left: -100px;
+  left: -50px;
 }
 
 .auth-design.dsn-2 {
