--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -260,6 +260,10 @@ button.next {
   padding: 0 20px;
 }
 
+.about-img {
+  animation: animateImage 5s ease-in-out infinite;
+}
+
 html input:-internal-autofill-selected,
 input::webkit-autofill,
 input::webkit-autofill:hover,
@@ -268,6 +272,21 @@ input::webkit-autofill:active {
   box-shadow: 0 0 0 30px transparent inset !important;
   -webkit-box-shadow: 0 0 0 30px transparent inset !important;
   background: inherit !important;
+}
+
+@keyframes animateImage {
+
+  0% {
+    transform: perspective(800px) rotateY(0deg) translateX(0);
+  }
+
+  50% {
+    transform: perspective(800px) rotateY(40deg) translateX(-30px);
+  }
+
+  100% {
+    transform: perspective(800px) rotateY(0deg) translateX(0);
+  }
 }
 
 @keyframes animate_design {
