--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -123,7 +123,7 @@
     }
 
     .about-block {
-        @apply text-justify xl:max-w-[70%] xl:mx-auto
+        @apply xl:max-w-[70%] xl:mx-auto
     }
 
     .slides div {
@@ -158,7 +158,7 @@
     }
 
     html header>nav {
-        @apply py-2 md:py-3 pl-5
+        @apply py-1 pl-5
     }
 
 
@@ -167,7 +167,7 @@
     } */
 
     h1 {
-        @apply text-4xl md:text-6xl tracking-tighter font-bold whitespace-normal break-words;
+        @apply text-4xl md:text-6xl font-bold whitespace-normal break-words;
     }
 
     h2 {
@@ -182,8 +182,12 @@
         @apply text-lg md:text-xl font-semibold
     }
 
+    h1, h2 {
+        @apply font-black
+    }
+
     button {
-        @apply disabled:opacity-50 disabled:hover:bg-none transform active:scale-95
+        @apply disabled:opacity-50 transform active:scale-95
     }
 
     input {
@@ -228,15 +232,15 @@
     }
 
     .ms_Main {
-        @apply mt-16 sm:mt-[80px]
+        @apply mt-16 sm:mt-[65px]
     }
 
     .main-about {
-        height: calc(100vh - 70px);
+        height: calc(100vh - 65px);
     }
 
     .main-search {
-        min-height: calc(100vh - 170px);
+        min-height: calc(100vh - 165px);
     }
 
     .input-alert {
